feat: add pricing control, cost analysis, and subscription enhancements
- Add pricing control and cost analysis pages for platform admin
- Implement upgrade gate component for subscription management
- Add cost tracking service and Stripe sync service
- Update subscription types and user permissions
- Add database migrations for pricing control and cost tracking
- Fix signup trigger and onboarding progress triggers
- Add internal user exclusions and org domain lookup functions
- Update AI provider and edge functions for cost tracking
- Enhance pricing sections across landing and product pages

--- a/packages/landing/src/locales/en-US/pricing.json
+++ b/packages/landing/src/locales/en-US/pricing.json
@@ -1,8 +1,8 @@
 {
   "header": {
-    "title": "Simple, Transparent",
-    "titleHighlight": "Early Adopter Pricing",
-    "subtitle": "Lock in special pricing as a founding user. All plans include 14-day free trial. No credit card required."
+    "title": "Simple, transparent",
+    "titleHighlight": "pricing",
+    "subtitle": "Start free, upgrade when you need more. No hidden fees."
   },
   "plans": {
     "solo": {
