--- a/packages/landing/src/locales/en-GB/pricing.json
+++ b/packages/landing/src/locales/en-GB/pricing.json
@@ -7,18 +7,6 @@
       "spelling": "analyze → analyse, customize → customise, organization → organisation",
       "phrasing": "trash → bin, apartment → flat, elevator → lift"
     },
-    "_currentStatus": "Current pricing content is spelling-neutral - no UK variants needed"
-  },
-  "plans": {
-    "team": {
-      "features": [
-        "Everything in Solo",
-        "Team collaboration",
-        "CRM integrations",
-        "Advanced analytics",
-        "Priority support",
-        "Custom workflows"
-      ]
-    }
+    "_currentStatus": "Current pricing content is spelling-neutral - no UK variants needed. Features are the same for both locales."
   }
 }
