refactor: landing page improvements and UK market adjustments
- Change hero timer display from 14:23 to 32:05
- Remove "Trusted by 2,000+ sales reps" section from hero
- Reduce bottom spacing in integrations section
- Update ROI calculator for UK market (£20/hr based on £40k salary)
- Change currency from $ to £ in pricing explanations
- Rename "Sixty" to "60" in user-facing copy (keep company name as Sixty Seconds Ltd)
- Update "we take over" to "60 takes over"
- Remove language selector from footer
- Swap Features and How It Works in navigation order
- Fix logo light/dark mode switching in nav and footer
- Add rollup-plugin-visualizer dependency

--- a/packages/landing/src/locales/en-US/pricing.json
+++ b/packages/landing/src/locales/en-US/pricing.json
@@ -53,7 +53,7 @@
   },
   "roi": {
     "title": "Calculate Your Savings",
-    "subtitle": "See how much time (and money) Sixty saves your team every month",
+    "subtitle": "See how much time (and money) 60 saves your team every month",
     "inputLabel": "Number of sales reps on your team",
     "results": {
       "timeSaved": "Time Saved Per Month",
@@ -62,7 +62,7 @@
     },
     "explanation": {
       "title": "How we calculate:",
-      "description": "Sixty saves each rep ~10 hours/week on meeting notes, follow-ups, and proposal writing. At an average of ${{hourlyRate}}/hr, that's ${{monthlySavings}}/rep/month in recovered selling time."
+      "description": "60 saves each rep ~10 hours/week on meeting notes, follow-ups, and proposal writing. At an average of £{{hourlyRate}}/hr, that's £{{monthlySavings}}/rep/month in recovered selling time."
     },
     "cta": "Start Saving Time Today"
   }
